fix: Add dark mode styles for RTI container and clean up ProductTags component

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -88,3 +88,12 @@ File: Main Css File
   --tw-bg-opacity: 1;
   background-color: #374151 !important;;
 }
+
+// style for rti dark mode
+
+@media (prefers-color-scheme: dark) {
+  .rti--container {
+     background: #374151 !important;
+  }
+
+}
